<resources>
    <string name="app_name">Rede Social</string>
    <string name="desc_logo">Logo do aplicativo.</string>
    <string name="hint_email">Digite seu email</string>
    <string name="hint_password">Digite sua senha</string>
    <string name="btn_login">Login</string>
    <string name="logout">Sair</string>
    <string name="hint_confirm">Digite sua senha novamente</string>
    <string name="text_signup">criar conta</string>
    <string name="empty_profile">Foto de perfil vazia.</string>
    <string name="change_picture">Alterar foto</string>
    <string name="text_username">Nome de Usuário (público)</string>
    <string name="text_full_name">Nome Completo</string>
    <string name="text_save">salvar</string>
    <string name="profile_picture">Foto de Perfil</string>
    <string name="edit_profile">Alterar Perfil</string>
    <string name="full_name">Nome Completo</string>
    <string name="username">Username</string>
    <string name="placeholder_image">Imagem placeholder</string>
    <string name="description">Descrição</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="load_feed">Carregar Postagens</string>
    <string name="add_new_post">Criar novo post</string>
    <string name="add_photo">Adicionar Foto</string>
    <string name="create_post">criar post</string>
    <string name="add_location">Adicionar Localização</string>
    <string name="profile">Perfil</string>
    <string name="search_city">Digite uma Cidade</string>
</resources>